<resources>
    <string name="app_name">MEP-Digital</string>
    <string name="user">Usuario</string>
    <string name="incorrect_user_password">Usuario o contraseña erroneos</string>
    <string name="login_button">Ingresar</string>
    <string name="title_activity_admin">Administrador</string>
    <string name="title_home">Cursos</string>
    <string name="title_dashboard">Profesores</string>
    <string name="title_notifications">Estudiantes</string>
    <string-array name="login_array">
        <item>Administrador</item>
        <item>Profesor</item>
        <item>Estudiante</item>
    </string-array>
    <string name="select_type_user">Selecciona tu tipo de usuario</string>
    <string name="id_number">ID</string>
    <string name="teacher">Profesor</string>
    <string name="name">Nombre</string>
    <string name="last_name_1">Primer Apellido</string>
    <string name="last_name_2">Segundo Apellido</string>
    <string name="email">Correo electronico</string>
    <string name="qualification">Calificacion</string>
    <string name="list_courses">Lista de cursos</string>
    <string name="cancel_button">Cancelar</string>
    <string name="save_button">Guardar</string>
    <string name="delete_button">Eliminar</string>
    <string name="new_student_button">Nuevo estudiante</string>
    <string name="new_course_button">Nuevo curso</string>
    <string name="student">Estudiante</string>
    <string name="new_teacher_button">Nuevo profesor</string>
    <string name="select_calification">Escoja la calificacion del profesor</string>
    <string name="new_course_title">Nuevo curso</string>
    <string name="id_course">Id del curso</string>
    <string name="name_course">Nombre del curso</string>
    <string name="schedule">Horario</string>
    <string name="select_days">Selecciona los días</string>
    <string name="cancel_alert_dialog">Cancelar</string>
    <string name="accept_alert_dialog">Acetar</string>
    <string name="select_days_alert_dialog">Selecciona los dias</string>
    <string name="select_start_time">Selecciona hora de inicio</string>
    <string name="select_finish_time_button">Selecciona hora de fin</string>
    <string name="admin_class_teacher_button">Administrar maestro</string>
    <string name="admin_class_students_button">Administrar estudiantes</string>
    <string name="save_class_button">Guardar</string>
    <string name="delete_class_button">Eliminar</string>
    <string name="select_start_time_dialog">Seleccciona la hora de inicio</string>
    <string name="add_student_to_course">Agregar</string>
    <string name="course_student_id_search">Cédula</string>
    <string name="data">Datos</string>
    <string name="list">Lista</string>
    <string name="loading">Cargando</string>
    <string name="sercha">Buscar</string>
    <string name="news">Noticias</string>
    <string name="homeworks">Tareas</string>
    <string name="chat">Chat del curso</string>
    <string name="student_list_teacher">Lista de estudiantes</string>
    <string name="back">Atrás</string>
    <string name="add_homework">Crear tarea</string>
    <string name="add_New">Crear noticia</string>
    <string name="ready">Listo</string>
    <string name="new_homework">Craer nueva tarea</string>
    <string name="title">Título</string>
    <string name="add_new">Craer nueva noticia</string>
    <string name="write_new">Escribir noticia</string>
    <string name="select_date">Selecciona fecha de entrega</string>
    <string name="write_homework">Escribir tarea</string>
    <string name="password">Contraseña</string>
    <string-array name="grade_array">
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
        <item>Sexto</item>
    </string-array>
    <string-array name="week_days">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
</resources>