<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Detail.StudentDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/studentDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/student"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idStudentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_number"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nameStudentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/lastName1TeacherEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_1"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/lastName2TeacherEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_2"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/emailStudentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/studentSelectGradeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/studentListCoursesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_courses"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/coursesStudentListView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/newNewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:text="@string/cancel_button" />
        <Button
            android:id="@+id/newHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveData"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/deleteStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>