<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher.CourseTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/nameCourseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/newsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/newsCourseTeacherListView"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </ListView>

        <Button
            android:id="@+id/newNewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_New" />

        <TextView
            android:id="@+id/newsTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeworks"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/homeworksCourseTeacherListView"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        </ListView>

        <Button
            android:id="@+id/newHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_homework" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/chatCourseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <Button
            android:id="@+id/studentsListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_list_teacher" />
        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>