<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTextEditText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher.AssigmentTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_homework"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nameHomeworkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/selectTimeHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/select_date"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/homeworkTeacherEditText"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/write_homework"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/save_class_button" />

        <Button
            android:id="@+id/deleteHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delete_class_button" />

        <Button
            android:id="@+id/cancelHomeworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>