<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Detail.Course.CourseStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameCourseStudentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/loading"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/idCourseStudentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/loading"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/courseStudentIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_student_id_search"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/searchCourseStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:text="@string/sercha" />


        <TextView
            android:id="@+id/courseStudentDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/data"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/dataCourseStudentListView"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/courseStudentListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/list"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/listCourseStudentListView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:foregroundTint="#AE2222" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addCourseStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:text="@string/add_student_to_course" />

        <Button
            android:id="@+id/deleteCourseStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:text="@string/delete_class_button" />

        <Button
            android:id="@+id/cancelCourseStudentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:text="@string/cancel_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>